# mark

./: .gitignore  Cargo.toml  README.md  eval.c  eval.h  gc.c  lis.c  mark.lis  meson.build  obj.h  print.c  print.h
MarkA/: README.md
docs/: language-design.md
slis/: Cargo.toml  Makefile  README.md  slis.c
slis/src/: main.rs
src/: arithmetic.c  arithmetic.h  array.c  byte_stream.c  byte_stream.h  environment.c  environment.h  eval.c  eval.h  lerror.c  lerror.h  lis.c  list.c  list.h  lstring.c  lstring.h  main.rs  meson.build  obj.c  obj.h  package.c  package.h  print.c  print.h  read.c  read.h  runtime.c  runtime.h  sequence.c  sequence.h  special_form.c  special_form.h  stream.c  stream.h  utf8.c  utf8.h
src/core/: arithmetic.c  arithmetic.h  array.c  array.h  basic_stream.c  basic_stream.h  bootstrap.c  bootstrap.h  data.c  data.h  environment.c  environment.h  eval.c  eval.h  lerror.c  lerror.h  list.c  list.h  lstring.c  lstring.h  meson.build  obj.c  obj.h  package.c  package.h  print.c  print.h  read.c  read.h  sequence.c  sequence.h  special_form.c  special_form.h  stream.c  stream.h  symbol.c  symbol.h  system.c  system.h
src/peripheral/: bootstrap2.c  bootstrap2.h  meson.build  test.lisp
src/util/: byte_stream.c  meson.build  table.c  table.h
tests/: byte_stream.c  meson.build  stream.c  utf8.c
tests/core/: meson.build  read.c  stream.c
tests/util/: byte_stream.c  meson.build  stream.c  table.c  utf8.c
