src = [
  'util/utf8.c',
  'util/byte_stream.c',

  'obj.c',
  'lerror.c',
  'stream.c',
  'lstring.c',
  'package.c',
  'environment.c',
  'read.c',
  'print.c',
  'eval.c',
  'array.c',
  'list.c',
  'arithmetic.c',
  'sequence.c',
  'special_form.c',
  'lis.c',
]
#src = ['gc.c']

lis = executable('lis', sources: src)
